--- a/ISSE12/biblio.bib
+++ b/ISSE12/biblio.bib
@@ -9,8 +9,8 @@
   BOOKTITLE =    "Proc. of the 2nd International Conference on Runtime Verification (RV'11)",
   YEAR =         "2011",
   MONTH =        "September",
-  ADDRESS =      "San Fransisco, CA",
-  NOTE =         "({\bf Won best paper award})",
+  OPTADDRESS =      "San Fransisco, CA",
+  OPTNOTE =         "({\bf Won best paper award})",
 }
 
 @InProceedings{BarST-SMT-10,
