--- a/ISSE12/intro.tex
+++ b/ISSE12/intro.tex
@@ -46,13 +46,14 @@ sensing and/or controlling some physical plant and that they are \emph{hard
 
 \paragraph{Outline.}  In Section~\ref{sec:motivation}, we motivate the need for
 runtime verification for ultra-critical systems.  In
-Section~\ref{sec:constraintsApproaches}, we describe constraints and approaches to RV for
-embedded systems.  In
-Section~\ref{sec:language}, we present the language of Copilot, our approach for
-ultra-critical RV.  We describe the tools (e.g., the interpreter and compiler
-back-ends) associated with Copilot in Section~\ref{sec:tools}.  We present two
-case-studies applying Copilot to avionic systems in
-Section~\ref{sec:case-study}.  Final remarks are given in Section~\ref{sec:conclusions}.
+Section~\ref{sec:constraintsApproaches}, we describe constraints and approaches
+to RV for embedded systems.  In Section~\ref{sec:language}, we present the
+language of Copilot, our approach for ultra-critical RV.  We describe the tools
+(e.g., the interpreter and compiler back-ends) associated with Copilot in
+Section~\ref{sec:tools}.  We present two case-studies applying Copilot to
+avionic systems in Section~\ref{sec:case-study}.  Related work is given in
+Section~\ref{sec:related}, and we make final remarks in
+Section~\ref{sec:conclusions}.
 
 \section{When Ultra-Critical Is \emph{Not} Ultra-Reliable}\label{sec:motivation}
 
