--- a/ISSE12/overview.tex
+++ b/ISSE12/overview.tex
@@ -48,7 +48,7 @@ periodically sampled based on the passage of time rather than occurrence of
 events~\cite{copilot}.
 
 The final constraint, SWaP, applies both to memory (embedded processors may have
-just a kilobytes of available memory) as well as additional hardware (e.g.,
+just a few kilobytes of available memory) as well as additional hardware (e.g.,
 processors or interconnects).
 
 
