--- a/ISSE12/flight-tests.tex
+++ b/ISSE12/flight-tests.tex
@@ -218,7 +218,7 @@ The executed sampling, agreement, and averaging is described as follows:
 \begin{myfig}[ht!]
   \centering
   \subfigure[]{
-    \includegraphics[width=0.46\textwidth, trim=100 120 20 120,clip=true]{Figs/flight1_7_22_2011.pdf}
+    \includegraphics[width=0.46\textwidth, trim=100 120 20 120,clip=true]{Figs/flight1_7_22_2011.png}
     \label{fig:nofaults}
   }
   \subfigure[]{
