--- a/ISSE12/main.tex
+++ b/ISSE12/main.tex
@@ -134,8 +134,8 @@ University of Copenhagen, Copenhagen, Denmark\\
 \email{wegmann@diku.dk}
 \and 
 Sebastian Niller \at 
-Unaffiliated\\
-\email{sebastian.niller@gmail.com}
+Evertz Microsystems\\
+\email{sniller@evertz.com}
 \and
 Alwyn Goodloe \at 
 NASA Langley Research Center, Hampton, Virginia  \\
