added paragraph addressing reviewer 5

--- a/ISSE12/flight-tests.tex
+++ b/ISSE12/flight-tests.tex
@@ -296,3 +296,10 @@ the stuck tube results in an underflowing value.  In
 Figure~\ref{fig:threestuckprobes}, with only two non-faulty tubes out of five
 left, $ftAvg$ is not able to choose a non-faulty value reliably anymore.
 All nodes still agree on a consistent---but wrong---value.
+
+Fault-tolerant monitoring of real-time systems can relieve the
+monitored underlying implementation of adding in and executing
+fault-tolerant variants of the executed algorithms (but does not
+exclude double-checking such). It can be used as a way to to have
+lower effort in verification of software correctness, while still
+having fault-tolerance seperately added through monitors.
