--- a/ISSE12/mavlink.tex
+++ b/ISSE12/mavlink.tex
@@ -299,7 +299,7 @@ globalPositionIntAlt = let l1 = drop 8  payload
                            l4 = drop 11 payload
                        in s3 l1 + s2 l2 + s1 l3 + l4
 \end{code}
-where $\texttt{.<<.}$ denotes the left shift operator. 
+where $\texttt{.<<.}$ denotes the left shift operator that takes two streams as parameters.
 
 The streams become parameters of a globalPositionInt trigger:
 
